Create basic css files

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -5,3 +5,24 @@ $primary-background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,1
 body {
   background: $primary-background;
 }
+
+header {
+  background-color: aquamarine;
+  height: 20%;
+}
+
+.info-button {
+  background-color: grey;
+}
+
+.login-form-section {
+  height: 30em;
+  width: 70%;
+  background-color: black;
+}
+
+.login-form {
+  height: 30em;
+  width: 70%;
+  background-color: grey;
+}
